Fixed horizontal scrollbar always showing

--- a/openeye/static/css/main.css
+++ b/openeye/static/css/main.css
@@ -18,10 +18,10 @@
     background-image: none
 }
 /* Main screen layout */
-.lpanel {
-    text-align: left;
+/*.lpanel {*/
+    /*text-align: left;*/
 
-}
+/*}*/
 
 .cpanel span.name {
     color: #aaaaaa;
